Refactor: move save button with logic into separate Panel component, add styles into button

--- a/react-admin/src/components/editor/style.css
+++ b/react-admin/src/components/editor/style.css
@@ -1,8 +1,8 @@
 iframe {
   border: none;
   position: absolute;
-  inset: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
+  top: var(--panel-height);
+  left: 0;
+  width: 100%;
+  height: calc(100vh - var(--panel-height));
 }
